add media for 768px-1280px

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -34,15 +34,11 @@
                 <button class="btn__primary">Make a friend</button>
             </div>
         </div>
-        <div class="logo__dog">
-            <img src="img/start-screen-puppy.png" alt="dog">
-        </div>
+        <img src="../../assets/images/png/start-screen-puppy.png" alt="dog" class="logo__dog">
     </main>
     <section class="about">
         <div class="container__about">
-            <div class="about__dog">
-                <img src="img/about-pets.png" alt="dogs">
-            </div>
+            <img src="../../assets/images/png/about-pets.png" alt="dogs" class="about__dog">
             <div class="about__info">
                 <h3 class="about__heading">About the shelter “Cozy House”</h3>
                 <div class="about__subheading">
@@ -58,42 +54,42 @@
         <h3 class="heading homeless__heading">Our friends who are looking for a house</h3>
         <div class="slider">
             <div class="slider__item">
-                <img src="img/pets/yyyy.jpg" alt="Katrine" class="slider__img"></img>
+                <img src="../../assets/images/slider/katrine.jpg" alt="Katrine" class="slider__img"></img>
                 <div class="slider__name">Katrine</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item">
-                <img src="img/pets/pets-jennifer.jpg" alt="Jennifer" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-jennifer.jpg" alt="Jennifer" class="slider__img"></img>
                 <div class="slider__name">Jennifer</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item">
-                <img src="img/pets/pets-woody.jpg" alt="Woody" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-woody.jpg" alt="Woody" class="slider__img"></img>
                 <div class="slider__name">Woody</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item" style="display: none">
-                <img src="img/pets/pets-katrin.jpg" alt="Sophia" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-sophia.jpg" alt="Sophia" class="slider__img"></img>
                 <div class="slider__name">Sophia</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item" style="display: none">
-                <img src="img/pets/pets-timmy.jpg" alt="Timmy" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-timmy.jpg" alt="Timmy" class="slider__img"></img>
                 <div class="slider__name">Timmy</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item" style="display: none">
-                <img src="img/pets/pets-charly.jpg" alt="Charly" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-charly.jpg" alt="Charly" class="slider__img"></img>
                 <div class="slider__name">Charly</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item" style="display: none">
-                <img src="img/pets/pets-scarlet.jpg" alt="Scarlett" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-scarlet.jpg" alt="Scarlett" class="slider__img"></img>
                 <div class="slider__name">Scarlett</div>
                 <button class="slider__more">Learn more</button>
             </div>
             <div class="slider__item" style="display: none">
-                <img src="img/pets/pets-katrine.jpg" alt="Freddie" class="slider__img"></img>
+                <img src="../../assets/images/slider/pets-freddie.jpg" alt="Freddie" class="slider__img"></img>
                 <div class="slider__name">Freddie</div>
                 <button class="slider__more">Learn more</button>
             </div>
@@ -101,55 +97,55 @@
         <button class="btn__under-slider">Get to know the rest</button>
     </section>
     <section class="help">
-        <div class="container__main">
+        <div class="container__help">
             <h3 class="heading help__heading">How you can help our shelter</h3>
             <div class="help__wrapper">
                 <div class="help__item">
-                    <img src="img/icons/icon-pet-food.png" alt="Pet food" class="help__png">
+                    <img src="../../assets/images/icons/icon-pet-food.png" alt="Pet food" class="help__png">
                     <div class="help__descr">Pet food</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-transportation.png" alt="Transportation" class="help__png">
+                    <img src="../../assets/images/icons/icon-transportation.png" alt="Transportation" class="help__png">
                     <div class="help__descr">Transportation</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/toys.png" alt="Toys" class="help__png">
+                    <img src="../../assets/images/icons/toys.png" alt="Toys" class="help__png">
                     <div class="help__descr">Toys</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-bowls-and-cups.png" alt="Bowls and cups" class="help__png">
+                    <img src="../../assets/images/icons/icon-bowls-and-cups.png" alt="Bowls and cups" class="help__png">
                     <div class="help__descr">Bowls and cups</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-shampoos.png" alt="Shampoos" class="help__png">
+                    <img src="../../assets/images/icons/icon-shampoos.png" alt="Shampoos" class="help__png">
                     <div class="help__descr">Shampoos</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-vitamins.png" alt="Vitamins" class="help__png">
+                    <img src="../../assets/images/icons/icon-vitamins.png" alt="Vitamins" class="help__png">
                     <div class="help__descr">Vitamins</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-medicines.png" alt="Medicines" class="help__png">
+                    <img src="../../assets/images/icons/icon-medicines.png" alt="Medicines" class="help__png">
                     <div class="help__descr">Medicines</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-collars-leashes.png" alt="Collars / leashes" class="help__png">
+                    <img src="../../assets/images/icons/icon-collars-leashes.png" alt="Collars / leashes" class="help__png">
                     <div class="help__descr">Collars / leashes</div>
                 </div>
                 <div class="help__item">
-                    <img src="img/icons/icon-sleeping-area.png" alt="Sleeping areas" class="help__png">
+                    <img src="../../assets/images/icons/icon-sleeping-area.png" alt="Sleeping areas" class="help__png">
                     <div class="help__descr">Sleeping areas</div>
                 </div>
             </div>
         </div>
     </section>
     <section class="donation">
-        <img src="img/donation-dog.png" alt="dog" class="donation__dog">
+        <img src="../../assets/images/png/donation-dog.png" alt="dog" class="donation__dog">
         <div class="donation__info">
             <h3 class="heading donation__heading">You can also make a donation</h3>
             <h5 class="donation__bank">Name of the bank / Type of bank account</h5>
             <div class="donation__input">
-                <img src="img/icons/credit-card.png" alt="card" class="donation__png">
+                <img src="../../assets/images/icons/credit-card.png" alt="card" class="donation__png">
                 <input class="donation__card" placeholder="8380 2880 8028 8791 7435"></input>
             </div>
            <div class="donation__legal">
@@ -162,26 +158,26 @@
             <div class="footer__info">
                 <h3 class="heading footer__heading">For questions and suggestions</h3>
                 <div class="item">
-                    <img src="img/icons/icon-email.png" alt="email" class="footer__png">
+                    <img src="../../assets/images/icons/icon-email.png" alt="email" class="footer__png">
                     <span class="footer__text">email@shelter.com</span>
                 </div>
                 <div class="item">
-                    <img src="img/icons/icon-phone.png" alt="phone" class="footer__png">
+                    <img src="../../assets/images/icons/icon-phone.png" alt="phone" class="footer__png">
                     <span class="footer__text">+13 674 567 75 54</span>
                 </div>
             </div>
             <div class="footer__info">
                 <h3 class="heading footer__heading footer__heading__second">We are waiting for your visit</h3>
                 <div class="item">
-                    <img src="img/icons/icon-marker.png" alt="" class="footer__png">
+                    <img src="../../assets/images/icons/icon-marker.png" alt="" class="footer__png">
                     <span class="footer__text">1 Central Street, Boston (entrance from the store)</span>
                 </div>
                 <div class="item">
-                    <img src="img/icons/icon-marker.png" alt="phone" class="footer__png">
+                    <img src="../../assets/images/icons/icon-marker.png" alt="phone" class="footer__png">
                     <span class="footer__text">18 South Park, London </span>
                 </div>
             </div>
-            <img src="img/footer-puppy.png" alt="dogs" footer__dog>
+            <img src="../../assets/images/png/footer-puppy.png" alt="dogs" class="footer__dog">
         </div>
     </footer>
 </body>
