--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -36,8 +36,8 @@
                 </div>
                 <button class="btn__primary"><a href="#friend" class="btn__text">Make a friend</a></button>
             </div>
+            <img src="../../assets/images/png/start-screen-puppy.png" alt="dog" class="logo__dog">
         </div>
-        <img src="../../assets/images/png/start-screen-puppy.png" alt="dog" class="logo__dog">
     </main>
     <section class="about">
         <div class="container__about">
@@ -55,56 +55,7 @@
     </section>
     <section class="homeless" id="friend">
         <h3 class="heading homeless__heading">Our friends who are looking for a house</h3>
-        <div class="slider">
-            <div class="slider__wrapper">
-                <div class="slider__round slider__prev">
-                    <div class="slider__indicator">&larr;</div>
-                </div>
-                <div class="slider__item show first-slide" data-slide="0">
-                    <img src="../../assets/images/slider/katrine.jpg" alt="Katrine" class="slider__img"></img>
-                    <div class="slider__name">Katrine</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item show second-slide" data-slide="1">
-                    <img src="../../assets/images/slider/pets-jennifer.jpg" alt="Jennifer" class="slider__img"></img>
-                    <div class="slider__name">Jennifer</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item show third-slide" data-slide="2">
-                    <img src="../../assets/images/slider/pets-woody.jpg" alt="Woody" class="slider__img"></img>
-                    <div class="slider__name">Woody</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item hide" data-slide="3">
-                    <img src="../../assets/images/slider/pets-sophia.jpg" alt="Sophia" class="slider__img"></img>
-                    <div class="slider__name">Sophia</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item hide" data-slide="4">
-                    <img src="../../assets/images/slider/pets-timmy.jpg" alt="Timmy" class="slider__img"></img>
-                    <div class="slider__name">Timmy</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item hide" data-slide="5">
-                    <img src="../../assets/images/slider/pets-charly.jpg" alt="Charly" class="slider__img"></img>
-                    <div class="slider__name">Charly</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item hide" data-slide="6">
-                    <img src="../../assets/images/slider/pets-scarlet.jpg" alt="Scarlett" class="slider__img"></img>
-                    <div class="slider__name">Scarlett</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__item hide" data-slide="7" style="left: -100%; transition-duration: 0s">
-                    <img src="../../assets/images/slider/pets-freddie.jpg" alt="Freddie" class="slider__img"></img>
-                    <div class="slider__name">Freddie</div>
-                    <button class="slider__more">Learn more</button>
-                </div>
-                <div class="slider__round slider__next">
-                    <div class="slider__indicator">&rarr;</div>
-                </div>
-            </div>
-        </div>
+        <div class="slider"></div>
         <button class="btn__under-slider">Get to know the rest</button>
     </section>
     <section class="help" id="help">
@@ -191,7 +142,6 @@
             <img src="../../assets/images/png/footer-puppy.png" alt="dogs" class="footer__dog">
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
