--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="nav__container">
                     <nav class="nav__menu">
-                        <div class="nav__item">About the shelter
+                        <div class="nav__item"><a href="#" class="selected">About the shelter</a>
                             <div class="nav__item_selected"></div>
                         </div>
                         <div class="nav__item">
@@ -27,16 +27,40 @@
                         <div class="nav__item"><a href="#contacts">Contacts</a></div>
                     </nav>
                 </div>
-                <div class="hamburger">&#9776;</div>
             </header>
             <div class="header__info">
                 <h2 class="heading main__heading">Not only people need a house</h2>
                 <div class="subheading main__subheading">
                     We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                 </div>
-                <button class="btn__primary"><a href="#friend" class="btn__text">Make a friend</a></button>
+                <button class="btn__primary">
+                    <a href="#friend" class="btn__text">Make a friend</a>
+                </button>
             </div>
             <img src="../../assets/images/png/start-screen-puppy.png" alt="dog" class="logo__dog">
+        </div>
+        <div class="hamburger">&#9776;</div>
+        <div class="menu hide">
+            <div class="menu__container">
+                <div class="logo__container">
+                    <h1 class="logo logo__title">Cozy House</h1>
+                    <div class="logo logo__subtitle">Shelter for pets in Boston</div>
+                </div>
+                <nav class="nav__menu nav__menu_modal">
+                    <div class="nav__item_modal nav__item_modal_selected">
+                        <a href="http://127.0.0.1:5500/src/pages/main/" class="selected">About the shelter</a>
+                        <div class="nav__item_selected"></div>
+                    </div>
+                    <div class="nav__item_modal">
+                        <a href="http://127.0.0.1:5500/src/pages/pets/">Our pets</a></div>
+                    <div class="nav__item_modal">
+                        <a href="#help">Help the shelter</a>
+                    </div>
+                    <div class="nav__item_modal">
+                        <a href="#contacts">Contacts</a>
+                    </div>
+                </nav>
+            </div>
         </div>
     </main>
     <section class="about">
@@ -54,7 +78,7 @@
         </div>
     </section>
     <section class="homeless" id="friend">
-        <h3 class="heading homeless__heading">Our friends who are looking for a house</h3>
+        <h3 class="heading homeless__heading">Our friends who <br> are looking for a house</h3>
         <div class="slider"></div>
         <button class="btn__under-slider">Get to know the rest</button>
     </section>
@@ -104,7 +128,7 @@
     <section class="donation">
         <img src="../../assets/images/png/donation-dog.png" alt="dog" class="donation__dog">
         <div class="donation__info">
-            <h3 class="heading donation__heading">You can also make a donation</h3>
+            <h3 class="heading donation__heading">You can also <br> make a donation</h3>
             <h5 class="donation__bank">Name of the bank / Type of bank account</h5>
             <div class="donation__input">
                 <img src="../../assets/images/icons/credit-card.png" alt="card" class="donation__png">
@@ -119,25 +143,25 @@
         <div class="container__footer">
             <div class="footer__info">
                 <h3 class="heading footer__heading">For questions and suggestions</h3>
-                <div class="item">
+                <a class="item" href="https://mail.ru/" target="_blank" >
                     <img src="../../assets/images/icons/icon-email.png" alt="email" class="footer__png">
-                    <span class="footer__text">email@shelter.com</span>
-                </div>
-                <div class="item">
-                    <img src="../../assets/images/icons/icon-phone.png" alt="phone" class="footer__png">
-                    <span class="footer__text">+13 674 567 75 54</span>
-                </div>
+                    <div class="footer__text">email@shelter.com</div>
+                </a>
+                <a class="item" href="tel:+136745677554">
+                    <img src="../../assets/images/icons/icon-phone.png" alt="phone" class="footer__png footer__png_right">
+                    <div class="footer__text">+13 674 567 75 54</div>
+                </a>
             </div>
-            <div class="footer__info">
+            <div class="footer__info footer__info_left">
                 <h3 class="heading footer__heading footer__heading__second">We are waiting for your visit</h3>
-                <div class="item">
+                <a href="https://goo.gl/maps/SrzCP6c6GwZeGga28" target="_blank" class="item item_second">
                     <img src="../../assets/images/icons/icon-marker.png" alt="" class="footer__png">
                     <span class="footer__text">1 Central Street, Boston (entrance from the store)</span>
-                </div>
-                <div class="item">
+                </a>
+                <a class="item item_second" href="https://goo.gl/maps/Ypcam6U3wiC1RWbZ6" target="_blank">
                     <img src="../../assets/images/icons/icon-marker.png" alt="phone" class="footer__png">
                     <span class="footer__text">18 South Park, London </span>
-                </div>
+                </a>
             </div>
             <img src="../../assets/images/png/footer-puppy.png" alt="dogs" class="footer__dog">
         </div>
