update ways to pages

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -21,7 +21,7 @@
                             <div class="nav__item_selected"></div>
                         </div>
                         <div class="nav__item">
-                            <a href="http://127.0.0.1:5500/src/pages/pets/">Our pets</a></div>
+                            <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/pets/">Our pets</a></div>
                         <div class="nav__item"><a href="#help">Help the shelter</a>
                         </div>
                         <div class="nav__item"><a href="#contacts">Contacts</a></div>
@@ -48,11 +48,11 @@
                 </div>
                 <nav class="nav__menu nav__menu_modal">
                     <div class="nav__item_modal nav__item_modal_selected">
-                        <a href="http://127.0.0.1:5500/src/pages/main/" class="selected">About the shelter</a>
+                        <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/" class="selected">About the shelter</a>
                         <div class="nav__item_selected"></div>
                     </div>
                     <div class="nav__item_modal">
-                        <a href="http://127.0.0.1:5500/src/pages/pets/">Our pets</a></div>
+                        <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/pets/">Our pets</a></div>
                     <div class="nav__item_modal">
                         <a href="#help">Help the shelter</a>
                     </div>
@@ -143,7 +143,7 @@
         <div class="container__footer">
             <div class="footer__info">
                 <h3 class="heading footer__heading">For questions and suggestions</h3>
-                <a class="item" href="https://mail.ru/" target="_blank" >
+                <a class="item" href="mailto:email@shelter.com" target="_blank" >
                     <img src="../../assets/images/icons/icon-email.png" alt="email" class="footer__png">
                     <div class="footer__text">email@shelter.com</div>
                 </a>
