--- a/src/pages/pets/index.html
+++ b/src/pages/pets/index.html
@@ -11,21 +11,21 @@
         <header class="pets">
             <div class="logo__container">
                 <h1 class="logo logo__title pets__logo__title">
-                    <a href="http://127.0.0.1:5500/src/pages/main/">Cozy House</a>
+                    <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/">Cozy House</a>
                 </h1>
                 <div class="logo logo__subtitle pets__logo__subtitle">Shelter for pets in Boston</div>
             </div>
             <div class="nav__container">
                 <nav class="nav__menu">
-                    <div class="nav__item"><a href="http://127.0.0.1:5500/src/pages/main/">About the shelter</a>
+                    <div class="nav__item"><a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/">About the shelter</a>
                     </div>
                     <div class="nav__item nav__item_select">
-                        <a href="http://127.0.0.1:5500/src/pages/pets/">Our pets</a>
+                        <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/pets/">Our pets</a>
                         <div class="nav__item_selected"></div>
                     </div>
-                    <div class="nav__item"><a href="http://127.0.0.1:5500/src/pages/main/#help">Help the shelter</a>
+                    <div class="nav__item"><a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/#help">Help the shelter</a>
                     </div>
-                    <div class="nav__item"><a href="http://127.0.0.1:5500/src/pages/main/#contacts">Contacts</a></div>
+                    <div class="nav__item"><a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/#contacts">Contacts</a></div>
                 </nav>
             </div>
             <div class="hamburger">&#9776;</div>
@@ -37,16 +37,16 @@
                     </div>
                     <nav class="nav__menu nav__menu_modal">
                         <div class="nav__item_modal">
-                            <a href="http://127.0.0.1:5500/src/pages/main/">About the shelter</a>
+                            <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/">About the shelter</a>
                         </div>
                         <div class="nav__item_modal nav__item_modal_selected">
-                            <a href="http://127.0.0.1:5500/src/pages/pets/" class="selected">Our pets</a>
+                            <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/pets/" class="selected">Our pets</a>
                             <div class="nav__item_selected"></div></div>
                         <div class="nav__item_modal">
-                            <a href="http://127.0.0.1:5500/src/pages/main/#help">Help the shelter</a>
+                            <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/#help">Help the shelter</a>
                         </div>
                         <div class="nav__item_modal">
-                            <a href="http://127.0.0.1:5500/src/pages/main/#contacts">Contacts</a>
+                            <a href="https://irmakdak.github.io/Shelter-rs-school/src/pages/main/#contacts">Contacts</a>
                         </div>
                     </nav>
                 </div>
@@ -75,29 +75,29 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="container__footer">
                 <div class="footer__info">
                     <h3 class="heading footer__heading">For questions and suggestions</h3>
-                    <div class="item">
+                    <a class="item" href="mailto:email@shelter.com" target="_blank" >
                         <img src="../../assets/images/icons/icon-email.png" alt="email" class="footer__png">
-                        <span class="footer__text">email@shelter.com</span>
-                    </div>
-                    <div class="item">
-                        <img src="../../assets/images/icons/icon-phone.png" alt="phone" class="footer__png">
-                        <span class="footer__text">+13 674 567 75 54</span>
-                    </div>
+                        <div class="footer__text">email@shelter.com</div>
+                    </a>
+                    <a class="item" href="tel:+136745677554">
+                        <img src="../../assets/images/icons/icon-phone.png" alt="phone" class="footer__png footer__png_right">
+                        <div class="footer__text">+13 674 567 75 54</div>
+                    </a>
                 </div>
-                <div class="footer__info">
+                <div class="footer__info footer__info_left">
                     <h3 class="heading footer__heading footer__heading__second">We are waiting for your visit</h3>
-                    <div class="item item_second">
+                    <a href="https://goo.gl/maps/SrzCP6c6GwZeGga28" target="_blank" class="item item_second">
                         <img src="../../assets/images/icons/icon-marker.png" alt="" class="footer__png">
                         <span class="footer__text">1 Central Street, Boston (entrance from the store)</span>
-                    </div>
-                    <div class="item item_second">
+                    </a>
+                    <a class="item item_second" href="https://goo.gl/maps/Ypcam6U3wiC1RWbZ6" target="_blank">
                         <img src="../../assets/images/icons/icon-marker.png" alt="phone" class="footer__png">
                         <span class="footer__text">18 South Park, London </span>
-                    </div>
+                    </a>
                 </div>
                 <img src="../../assets/images/png/footer-puppy.png" alt="dogs" class="footer__dog">
             </div>
